发布版规页面

--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
@@ -619,7 +619,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十条</td>
-                    <td class="td_content">发布包括但不限于以下列示的有悖社会公序良俗的信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的有悖社会公序良俗的信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -631,7 +631,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十一条</td>
-                    <td class="td_content">发布包括但不限于以下列示的虚假信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的虚假信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -648,6 +648,152 @@
                 <tr>
                     <td class="td_title">（四）</td>
                     <td class="td_content">职介故意隐藏身份，以企业直招名义发布其所代理的招聘职位，职介公司为自身公司招聘人员，按照企业直招认定。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">第十二条</td>
+                    <td class="td_content">发布包括但不限于以下列出的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（一）</td>
+                    <td class="td_content">故意发布与招聘类别不相关的职位。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（二）</td>
+                    <td class="td_content">招聘信息中，关键内容（含企业名称、职位名称、职位类别、工作地址、联系方式等）填写不全或者不规范。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">第十三条</td>
+                    <td class="td_content">其他包括但不限于以下列出的侵犯用户权益的行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（一）</td>
+                    <td class="td_content">未经授权使用他人品牌进行招聘的行为。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（二）</td>
+                    <td class="td_content">通过各种方式故意注册大量账户或发布大量信息，违规攫取流量，并伤害其他用户利益的行为。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（三）</td>
+                    <td class="td_content">交易、服务过程中拒不履行双方约定的行为。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（四）</td>
+                    <td class="td_content">违反招聘信息填写规范的行为。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（五）</td>
+                    <td class="td_content">以计算机系统等技术手段批量下载简历，违规获取其他用户个人信息。</td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">第四章 附则</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">附件一 招聘信息填写规范</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td_title">关于标题</td>
+                    <td class="td_content">标题是所有信息内容主旨的全部体现，精确表达信息发布者的意图。言简意赅、表词达意的标题文字更容易受到潜在求职者的青睐。我们鼓励信息发布者如实、恰当、富有技巧地为信息内容拟一个合适的标题，同时不允许发布包括但不限于以下情形的标题：</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（一）</td>
+                    <td class="td_content">含有违反国家法律法规以及国家法律法规明令禁止的标题描述。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（二）</td>
+                    <td class="td_content">超出招聘类别允许发布信息的范围，与招聘行业信息无关的标题描述。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（三）</td>
+                    <td class="td_content">表达模糊、无法判断信息发布者意图的标题描述。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（四）</td>
+                    <td class="td_content">标题中含有无关符号、字母、数字等内容且影响浏览者判断其真实意图的标题描述。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（五）</td>
+                    <td class="td_content">夸大事实，容易对信息浏览者产生误导的标题描述。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">关于图片</td>
+                    <td class="td_content">图片是浏览者最直观了解信息详情的入口，图片的质量影响浏览者对信息的判断，在一定程度上，浏览者的偏好受图片的左右。我们鼓励信息发布者上传真实、清晰、合理尺寸（如网站有规定按网站规定）的图片，同时不允许发布包括但不限于以下情形的图片：</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（一）</td>
+                    <td class="td_content">图片内容含有违反国家法律法规以及国家法律法规明令禁止的内容。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（二）</td>
+                    <td class="td_content">图片内容与招聘的类别信息无关联。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（三）</td>
+                    <td class="td_content">未经他人许可，盗用、冒用他人的图片。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（四）</td>
+                    <td class="td_content">发布所有权存在纠纷、争议的图片。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（五）</td>
+                    <td class="td_content">图片模糊、难以辨认，影响浏览者对信息内容的判断。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（六）</td>
+                    <td class="td_content">上传多张与信息内容无关联的图片，影响浏览者对信息内容的判断。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（七）</td>
+                    <td class="td_content">图片中所含有的联系方式等内容占据大量的图片面积，影响浏览者对图片内容的判断。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（八）</td>
+                    <td class="td_content">图片中所含有的联系方式与信息所留联系方式不一致。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">关于联系方式</td>
+                    <td class="td_content">联系方式在求职者和用人单位之间起纽带作用，电话号码、QQ、微信等主流通讯工具以及58帮帮均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。如果用户想保护自己电话号码免于泄露，可通过58呼转服务对电话进行保护。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（一）</td>
+                    <td class="td_content">盗用、冒用他人联系方式。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（二）</td>
+                    <td class="td_content">联系方式虚假、不存在（电话号码、QQ、微信虚假或不存在）。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（三）</td>
+                    <td class="td_content">联系方式不规范书写（用字母“o”代替数字“0”，用字母“l”代替数字“1”等情形）。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（四）</td>
+                    <td class="td_content">联系方式中含有非法含义的字符或拼音。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">关于联系方式</td>
+                    <td class="td_content">联系方式在求职者和用人单位之间起纽带作用，电话号码、QQ、微信等主流通讯工具以及58帮帮均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。如果用户想保护自己电话号码免于泄露，可通过58呼转服务对电话进行保护。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（一）</td>
+                    <td class="td_content">盗用、冒用他人联系方式。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（二）</td>
+                    <td class="td_content">联系方式虚假、不存在（电话号码、QQ、微信虚假或不存在）。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（三）</td>
+                    <td class="td_content">联系方式不规范书写（用字母“o”代替数字“0”，用字母“l”代替数字“1”等情形）。</td>
+                </tr>
+                <tr>
+                    <td class="td_title">（四）</td>
+                    <td class="td_content">联系方式中含有非法含义的字符或拼音。</td>
                 </tr>
             </table>
         </div>
