--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY_FTBG.cshtml
@@ -43,7 +43,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第一条</td>
-                    <td class="td_content">为营造开放、可信、安全的分类信息平台，保障信息小镇用户的合法权益，维护和谐的网络商业环境，信息小镇信息质量标准委员会制订本总则。</td>
+                    <td class="td_content">为营造开放、可信、安全的分类信息平台，保障信息小镇用户的合法权益，维护和谐的网络商业环境，福建天问信息技术有限公司制订本总则。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第二条</td>
@@ -92,7 +92,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十二条</td>
-                    <td class="td_content">付费用户：指向信息小镇支付网络推广服务费用的用户。</td>
+                    <td class="td_content">付费用户：指向信息小镇支付费用，购买各项服务的用户。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第十三条</td>
@@ -105,10 +105,6 @@
                 <tr>
                     <td class="td_title">第十五条</td>
                     <td class="td_content">被投诉方：指投诉方所投诉的信息小镇平台用户。</td>
-                </tr>
-                <tr>
-                    <td class="td_title">第十六条</td>
-                    <td class="td_content">反通知：被投诉方接到信息小镇的整改通知后向信息小镇提交的相关证明材料。</td>
                 </tr>
                 <tr>
                     <td colspan="2">
@@ -157,7 +153,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十八条</td>
-                    <td class="td_content">发布包括但不限于如下列示的有悖社会公序良俗的信息，依据各类别信息质量标准细则给予相应处罚。<br />有悖社会公序良俗的信息指不违背强制性法律或未有明确的法律规定，但违反社会的一般善良风俗习惯和公认的道德规范的信息。</td>
+                    <td class="td_content">发布包括但不限于如下列出的有悖社会公序良俗的信息，依据各类别信息质量标准细则给予相应处罚。<br />有悖社会公序良俗的信息指不违背强制性法律或未有明确的法律规定，但违反社会的一般善良风俗习惯和公认的道德规范的信息。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第十九条</td>
@@ -202,7 +198,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第二十五条</td>
-                    <td class="td_content">账号限权：限制用户所享有之信息小镇服务的权利，包含以下一种或多种处理。</td>
+                    <td class="td_content">账号限权：限制用户所享有的信息小镇服务的权利，包含以下一种或多种处理。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -295,7 +291,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第四条</td>
-                    <td class="td_content">信息小镇依据用户使用习惯，将本地服务行业类别分为：家政服务、婚庆摄影、教育培训、商务服务、装修建材、汽车服务、旅游酒店、医疗健康、餐饮美食、丽人、休闲娱乐、招商加盟、批发采购、农林牧副渔等。</td>
+                    <td class="td_content">信息小镇依据用户使用习惯，将本地服务行业类别分为：餐饮美食、医疗健康、教育培训、装修建材、旅游酒店、休闲娱乐、招商加盟、批发采购、商务服务、汽车服务、家政服务、婚庆摄影、丽人、农林牧副渔等。</td>
                 </tr>
                 <tr>
                     <td colspan="2">
@@ -320,7 +316,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第六条</td>
-                    <td class="td_content">发布包括但不限于以下列示的有悖社会公序良俗的信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的有悖社会公序良俗的信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -332,7 +328,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第七条</td>
-                    <td class="td_content">发布包括但不限于以下列示的虚假信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的虚假信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -344,7 +340,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第八条</td>
-                    <td class="td_content">发布包括但不限于以下列示的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -356,7 +352,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第九条</td>
-                    <td class="td_content">其他包括但不限于以下列示的侵犯用户权益的行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
+                    <td class="td_content">其他包括但不限于以下列出的侵犯用户权益的行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -381,7 +377,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <span class="span_body_nav_text_title" style="font-weight:bold;">附件一 本地服务信息填写规范</span>
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">附则一 本地服务信息填写规范</span>
                     </td>
                 </tr>
                 <tr>
@@ -692,7 +688,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <span class="span_body_nav_text_title" style="font-weight:bold;">附件一 招聘信息填写规范</span>
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">附则一 招聘信息填写规范</span>
                     </td>
                 </tr>
                 <tr>
@@ -857,7 +853,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <span class="span_body_nav_text_title" style="font-weight:bold;">附件二 简历发布规范</span>
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">附则二 简历发布规范</span>
                     </td>
                 </tr>
                 <tr>
@@ -882,7 +878,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <span class="span_body_nav_text_title" style="font-weight:bold;">附件三 面试邀请发送规范</span>
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">附则三 面试邀请发送规范</span>
                     </td>
                 </tr>
                 <tr>
@@ -970,7 +966,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第九条</td>
-                    <td class="td_content">发布包括但不限于以下列示的有悖社会公序良俗的信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的有悖社会公序良俗的信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -982,7 +978,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十条</td>
-                    <td class="td_content">发布包括但不限于以下列示的虚假信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的虚假信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -998,7 +994,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十一条</td>
-                    <td class="td_content">发布包括但不限于以下列示的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1010,7 +1006,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十二条</td>
-                    <td class="td_content">其他包括但不限于以下列示的侵犯用户合法权益的行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
+                    <td class="td_content">其他包括但不限于以下列出的侵犯用户合法权益的行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1100,7 +1096,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">关于联系方式</td>
-                    <td class="td_content">联系方式在买家和卖家之间起纽带作用，电话号码、QQ、微信等主流通讯工具以及58帮帮均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。如果用户想保护自己电话号码免于泄露，可通过58呼转服务对电话进行保护。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
+                    <td class="td_content">联系方式在买家和卖家之间起纽带作用，电话号码、QQ、微信等主流通讯工具均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1213,7 +1209,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第一条</td>
-                    <td class="td_content">为了保护信息小镇二手市场用户的合法权益，根据《信息小镇信息质量标准总则》，结合58同城打击58同城平台内二手市场欺诈行为的具体经验及实际情况，制定信息小镇二手市场信息质量标准细则（以下简称“本细则”）。</td>
+                    <td class="td_content">为了保护信息小镇二手市场用户的合法权益，根据《信息小镇信息质量标准总则》，结合信息小镇打击信息小镇平台内二手市场欺诈行为的具体经验及实际情况，制定信息小镇二手市场信息质量标准细则（以下简称“本细则”）。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第二条</td>
@@ -1259,7 +1255,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第八条</td>
-                    <td class="td_content">发布包括但不限于以下列示的有悖社会公序良俗的信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的有悖社会公序良俗的信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1271,7 +1267,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第九条</td>
-                    <td class="td_content">发布包括但不限于以下列示的虚假信息，删除所有违规内容。</td>
+                    <td class="td_content">发布包括但不限于以下列出的虚假信息，删除所有违规内容。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1287,7 +1283,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十条</td>
-                    <td class="td_content">发布包括但不限于以下列示的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1299,7 +1295,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十一条</td>
-                    <td class="td_content">其他包括但不限于以下列示的侵犯用户权益等行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除违约方缴纳的保证金及（或）服务费用、终止服务等。</td>
+                    <td class="td_content">其他包括但不限于以下列出的侵犯用户权益等行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除违约方缴纳的保证金及（或）服务费用、终止服务等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1324,7 +1320,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十二条</td>
-                    <td class="td_content">关于欺诈行为的定义：指用户（包含个人卖家及商家）违背58同城平台质量标准，通过采取发布虚假信息或者其他不正当手段欺骗、误导其他用户，使其他用户的合法权益受到损害的行为。包括但不仅限于：</td>
+                    <td class="td_content">关于欺诈行为的定义：指用户（包含个人卖家及商家）违背信息小镇平台质量标准，通过采取发布虚假信息或者其他不正当手段欺骗、误导其他用户，使其他用户的合法权益受到损害的行为。包括但不仅限于：</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1458,7 +1454,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">关于联系方式</td>
-                    <td class="td_content">联系方式在买家和卖家之间起纽带作用，电话号码、QQ、微信等主流通讯工具以及58帮帮均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。如果用户想保护自己电话号码免于泄露，可通过58呼转服务对电话进行保护。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
+                    <td class="td_content">联系方式在买家和卖家之间起纽带作用，电话号码、QQ、微信等主流通讯工具均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1559,7 +1555,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第一条</td>
-                    <td class="td_content">为了保护信息小镇车辆服务中买卖双方的合法利益，根据《信息小镇信息质量标准总则》，结合信息小镇打击信息小镇平台内车辆市场欺诈行为的具体经验及实际情况，制定58同城车辆市场信息质量标准细则（以下简称“本细则”）。</td>
+                    <td class="td_content">为了保护信息小镇车辆服务中买卖双方的合法利益，根据《信息小镇信息质量标准总则》，结合信息小镇打击信息小镇平台内车辆市场欺诈行为的具体经验及实际情况，制定信息小镇车辆市场信息质量标准细则（以下简称“本细则”）。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第二条</td>
@@ -1589,7 +1585,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第六条</td>
-                    <td class="td_content">发布包括但不限于以下列示的非法信息，根据情节轻重进行以下一种或多种处理：删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的非法信息，根据情节轻重进行以下一种或多种处理：删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1601,11 +1597,11 @@
                 </tr>
                 <tr>
                     <td class="td_title">第七条</td>
-                    <td class="td_content">发布包括但不限于以下列示的有悖社会公序良俗的信息，删除所有违规内容。（一）信息中含有低俗、下流、恶趣味等描述或恶意辱骂、诽谤、人身攻击等内容；（二）信息内容违背正常伦理、道德、社会风俗习惯等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的有悖社会公序良俗的信息，删除所有违规内容。（一）信息中含有低俗、下流、恶趣味等描述或恶意辱骂、诽谤、人身攻击等内容；（二）信息内容违背正常伦理、道德、社会风俗习惯等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">第八条</td>
-                    <td class="td_content">发布包括但不限于以下列示的虚假信息(存在欺诈风险)，根据情节轻重进行以下一种或多种处理：删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的虚假信息(存在欺诈风险)，根据情节轻重进行以下一种或多种处理：删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1625,7 +1621,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第九条</td>
-                    <td class="td_content">发布包括但不限于以下列示的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
+                    <td class="td_content">发布包括但不限于以下列出的无意义信息（对浏览者无帮助信息），根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1649,7 +1645,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">第十条</td>
-                    <td class="td_content">其他包括但不限于以下列示的侵犯用户权益等行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
+                    <td class="td_content">其他包括但不限于以下列出的侵犯用户权益等行为，根据情节轻重进行以下一种或多种处理：降权违规信息、返回修改违规信息、删除所有违规内容、关闭账号、扣除保证金及（或）服务费、终止服务等。</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1674,7 +1670,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <span class="span_body_nav_text_title" style="font-weight:bold;">附件一 车辆信息填写规范</span>
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">附则一 车辆信息填写规范</span>
                     </td>
                 </tr>
                 <tr>
@@ -1735,7 +1731,7 @@
                 </tr>
                 <tr>
                     <td class="td_title">关于联系方式</td>
-                    <td class="td_content">联系方式在买家和卖家之间起纽带作用，电话号码、QQ、微信等主流通讯工具以及58帮帮均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。如果用户想保护自己电话号码免于泄露，可通过58呼转服务对电话进行保护。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
+                    <td class="td_content">联系方式在买家和卖家之间起纽带作用，电话号码、QQ、微信等主流通讯工具均属于联系方式的范畴，信息发布者在信息发布时可根据自己的意愿选择一种或多种联系方式进行填写。为了保证能够与信息发布者及时取得联系，我们要求真实、有效的电话号码为必填选项，同时不允许发布包括但不限于以下情形的联系方式：</td>
                 </tr>
                 <tr>
                     <td class="td_title">（一）</td>
@@ -1823,6 +1819,21 @@
                 </tr>
                 <tr>
                     <td colspan="2" class="td_content">如有其他未尽事宜，请参照《信息小镇信息质量标准总则》及信息小镇相关线上协议、规则等规定进行处理。</td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="span_body_nav_text_title" style="font-weight:bold;"></span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="span_body_nav_text_title" style="font-weight:bold;">本标准自2017年8月25日生效。</span>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span class="span_body_nav_text_title" style="font-weight:bold; text-align:right;">福建天问信息技术有限公司</span>
+                    </td>
                 </tr>
             </table>
         </div>
