--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Css/BZZX/BZZX_SY.css
@@ -8,6 +8,28 @@
     border-right: none;
 }
 
+.div_left_box_bottom {
+    width: 751px;
+    height: 360px;
+    display: inline-block;
+    float: left;
+    border: 1px solid #eeeeee;
+    margin-top: 15px;
+}
+
+.div_left_box_bottom_nav {
+    height: 34px;
+    background-color: #f0f0f0;
+    padding-top: 3px;
+}
+
+.span_left_box_bottom_nav {
+    font-weight: bold;
+    color: #333;
+    font-size: 16px;
+    padding: 6px 10px;
+}
+
 .div_left_box_info {
     width: 150px;
     height: 110px;
@@ -55,4 +77,47 @@
     font-size: 12px;
     color: #999;
     display: none;
+}
+
+.table_left_box_bottom {
+    width: 100%;
+}
+
+    .table_left_box_bottom tr:nth-child(even) {
+        background-color: #f7f7f7;
+    }
+
+.tr_left_box_bottom {
+    line-height: 40px;
+    width: 100%;
+}
+
+.td_left_box_bottom_left {
+    font-size: 12px;
+    width: 140px;
+    text-align: right;
+    padding-right: 20px;
+}
+
+.span_left_box_bottom_right {
+    color: #1790b4;
+    font-size: 12px;
+    display: inline-block;
+    float: left;
+    cursor: pointer;
+}
+
+    .span_left_box_bottom_right:hover {
+        color: #ff6100;
+    }
+
+.em_left_box_bottom_right {
+    width: 1px;
+    height: 13px;
+    display: inline-block;
+    float: left;
+    background-color: #ccc;
+    margin-top: 13px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
