--- a/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
+++ b/TianWen.XiaoZhen1Qu.Web/Areas/Business/Views/BZZX/BZZX_SY.cshtml
@@ -20,7 +20,6 @@
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhyecz.png")" />
                 <span class="span_left_box_info_text">账户余额充值</span>
                 <span class="span_left_box_info_remark">进入我的账户充值</span>
-
             </div>
             <div class="div_left_box_info" id="div_left_box_info_zhmm">
                 <img class="img_left_box_info" src="@Url.Content("~/Areas/Business/Css/images/bzzx/bzzx_sy_zhmm.png")" />
@@ -76,6 +75,121 @@
             <div class="div_left_box_info div_left_box_info_bottom"></div>
             <div class="div_left_box_info div_left_box_info_bottom"></div>
             <div class="div_left_box_info div_left_box_info_bottom"></div>
+        </div>
+        <div class="div_left_box_bottom">
+            <div class="div_left_box_bottom_nav">
+                <span class="span_left_box_bottom_nav">常见问题快速导航</span>
+            </div>
+            <table class="table_left_box_bottom">
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">新手使用指南：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right" id="span_left_box_bottom_right_cwczyh">成为注册用户</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">如何发布信息</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">如何管理信息</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">如何查找信息</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">信息审核规范</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">买家入门</span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">用户注册与登录：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">用户名修改</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">无法登录</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">账户丢失或被盗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">账户注销</span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">信息发布与删除：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">信息在列表不显示</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">提示信息相似或重复</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">信息无法发布</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">信息被删除</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">如何修改/删除信息 </span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">认证与取消认证：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">认证中心</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">如何认证</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">更换认证</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">收不到认证码</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">收不到认证邮件</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">更多认证问题</span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">置顶/余额/刷新：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">置顶服务</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">余额充值操作步骤</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">刷新介绍</span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">账户等级与信用：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">什么是信用</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">信用的增加与减少</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">等级与发帖量</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">同一条信息更新次数</span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">网络防骗常识：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">拼车防骗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">网络招聘防骗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">网警防骗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">宠物防骗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">二手交易防骗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">房产防骗</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">火车票防骗</span>
+                    </td>
+                </tr>
+                <tr class="tr_left_box_bottom">
+                    <td class="td_left_box_bottom_left">预约/评价/开店：</td>
+                    <td class="td_left_box_bottom_right">
+                        <span class="span_left_box_bottom_right">预约评价买家使用指南</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">预约评价卖家使用指南</span>
+                        <em class="em_left_box_bottom_right"></em>
+                        <span class="span_left_box_bottom_right">评价申诉</span>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
